website/versioned_docs/version-1.2.0-beta1/api/index.md
# react-mnemonic

## Classes

- [CodecError](classes/CodecError.md)
- [SchemaError](classes/SchemaError.md)

## Interfaces

- [Codec](interfaces/Codec.md)
- [CreateSchemaRegistryOptions](interfaces/CreateSchemaRegistryOptions.md)
- [JsonSchema](interfaces/JsonSchema.md)
- [MnemonicDevToolsCapabilities](interfaces/MnemonicDevToolsCapabilities.md)
- [MnemonicDevToolsMeta](interfaces/MnemonicDevToolsMeta.md)
- [MnemonicDevToolsProviderApi](interfaces/MnemonicDevToolsProviderApi.md)
- [MnemonicDevToolsProviderDescriptor](interfaces/MnemonicDevToolsProviderDescriptor.md)
- [MnemonicDevToolsProviderEntry](interfaces/MnemonicDevToolsProviderEntry.md)
- [MnemonicDevToolsRegistry](interfaces/MnemonicDevToolsRegistry.md)
- [MnemonicDevToolsWeakRef](interfaces/MnemonicDevToolsWeakRef.md)
- [MnemonicKeyDescriptor](interfaces/MnemonicKeyDescriptor.md)
- [MnemonicKeySSRConfig](interfaces/MnemonicKeySSRConfig.md)
- [MnemonicKeyState](interfaces/MnemonicKeyState.md)
- [MnemonicProviderOptions](interfaces/MnemonicProviderOptions.md)
- [MnemonicProviderProps](interfaces/MnemonicProviderProps.md)
- [MnemonicProviderSSRConfig](interfaces/MnemonicProviderSSRConfig.md)
- [MnemonicRecoveryEvent](interfaces/MnemonicRecoveryEvent.md)
- [MnemonicRecoveryHook](interfaces/MnemonicRecoveryHook.md)
- [SchemaRegistry](interfaces/SchemaRegistry.md)
- [StructuralNode](interfaces/StructuralNode.md)
- [StructuralTreeHelpers](interfaces/StructuralTreeHelpers.md)
- [UseMnemonicRecoveryOptions](interfaces/UseMnemonicRecoveryOptions.md)

## Type Aliases

- [CompiledValidator](type-aliases/CompiledValidator.md)
- [InferJsonSchemaValue](type-aliases/InferJsonSchemaValue.md)
- [JsonSchemaType](type-aliases/JsonSchemaType.md)
- [JsonSchemaValidationError](type-aliases/JsonSchemaValidationError.md)
- [KeySchema](type-aliases/KeySchema.md)
- [Listener](type-aliases/Listener.md)
- [MigrationPath](type-aliases/MigrationPath.md)
- [MigrationRule](type-aliases/MigrationRule.md)
- [Mnemonic](type-aliases/Mnemonic.md)
- [MnemonicHydrationMode](type-aliases/MnemonicHydrationMode.md)
- [MnemonicRecoveryAction](type-aliases/MnemonicRecoveryAction.md)
- [ReconcileContext](type-aliases/ReconcileContext.md)
- [SchemaBoundKeyOptions](type-aliases/SchemaBoundKeyOptions.md)
- [SchemaMode](type-aliases/SchemaMode.md)
- [StorageLike](type-aliases/StorageLike.md)
- [TypedJsonSchema](type-aliases/TypedJsonSchema.md)
- [TypedKeySchema](type-aliases/TypedKeySchema.md)
- [Unsubscribe](type-aliases/Unsubscribe.md)
- [UseMnemonicKeyOptions](type-aliases/UseMnemonicKeyOptions.md)

## Variables

- [JSONCodec](variables/JSONCodec.md)
- [mnemonicSchema](variables/mnemonicSchema.md)

## Functions

- [compileSchema](functions/compileSchema.md)
- [createCodec](functions/createCodec.md)
- [createSchemaRegistry](functions/createSchemaRegistry.md)
- [dedupeChildrenBy](functions/dedupeChildrenBy.md)
- [defineKeySchema](functions/defineKeySchema.md)
- [defineMigration](functions/defineMigration.md)
- [defineMnemonicKey](functions/defineMnemonicKey.md)
- [defineWriteMigration](functions/defineWriteMigration.md)
- [findNodeById](functions/findNodeById.md)
- [insertChildIfMissing](functions/insertChildIfMissing.md)
- [MnemonicProvider](functions/MnemonicProvider.md)
- [renameNode](functions/renameNode.md)
- [useMnemonicKey](functions/useMnemonicKey.md)
- [useMnemonicRecovery](functions/useMnemonicRecovery.md)
- [validateJsonSchema](functions/validateJsonSchema.md)
